--- a/public/markup.html
+++ b/public/markup.html
@@ -1,4 +1,4 @@
-<!-- Swu Post Start -->
+<!-- Swu Project Start -->
 <div class="row">
     <div class="col-sm-1"></div>
     <div class="col-sm-10">
@@ -6,32 +6,32 @@
         <div class="card">
             <div class="card-header">
                 <span class="card-title">
-                    <a href="#swu_post_collapse_card" data-bs-toggle="collapse" aria-expanded="true" aria-controls="swu_post_collapse_card" class="text-decoration-none">
-                        <h3 class="mb-0"><i class="far fa-star"></i> Post <i class="fas fa-caret-down"></i> </h3>
+                    <a href="#swu_project_collapse_card" data-bs-toggle="collapse" aria-expanded="true" aria-controls="swu_project_collapse_card" class="text-decoration-none">
+                        <h3 class="mb-0"><i class="far fa-star"></i> Project <i class="fas fa-caret-down"></i> </h3>
                     </a>
-                    <div style="margin-top: -10px;"><i> Here you can edit your post </i></div>
+                    <div style="margin-top: -10px;"><i> Here you can edit your project </i></div>
                 </span>
             </div>
 
-            <div class="collapse show" id="swu_post_collapse_card">
+            <div class="collapse show" id="swu_project_collapse_card">
                 <div class="card-body">
 
                     <div class="row">
                         <div class="col-md-6">
                             <div class="input-group">
-                                <span class="input-group-text" id="swu_post_search_addon"><i class="fas fa-filter"></i>&nbsp;Filtern:</span>
-                                <input type="text" class="form-control" placeholder="Name, Adresse, Account, Id...." aria-describedby="swu_post_search_addon" id="swu_post_filter_input">
-                                <button class="btn btn-outline-secondary" type="button" title="Clear filter" id="swu_post_filter_clear_button"><i class="fas fa-times"></i></button>
+                                <span class="input-group-text" id="swu_project_search_addon"><i class="fas fa-filter"></i>&nbsp;Filtern:</span>
+                                <input type="text" class="form-control" placeholder="Name, Adresse, Account, Id...." aria-describedby="swu_project_search_addon" id="swu_project_filter_input">
+                                <button class="btn btn-outline-secondary" type="button" title="Clear filter" id="swu_project_filter_clear_button"><i class="fas fa-times"></i></button>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <button type="button" class="btn btn-info float-end" id="swu_post_create_button">
-                                <i class="fas fa-plus"></i>&nbsp; Create Post
+                            <button type="button" class="btn btn-info float-end" id="swu_project_create_button">
+                                <i class="fas fa-plus"></i>&nbsp; Create Project
                             </button>
                         </div>
                     </div>
                     <br>
-                    <div id="swu_post_table"></div>
+                    <div id="swu_project_table"></div>
                 </div>
             </div>
         </div>
@@ -40,13 +40,13 @@
 </div>
 <br>
 
-<!--Swu Post Modal Start-->
-<div aria-hidden="true" role="dialog" tabindex="-1" id="swu_post_modal" class="modal fade">
+<!--Swu Project Modal Start-->
+<div aria-hidden="true" role="dialog" tabindex="-1" id="swu_project_modal" class="modal fade">
     <div class="modal-dialog" style="min-width: 70%;">
         <div class="modal-content">
-            <form id="swu_post_modal_form">
+            <form id="swu_project_modal_form">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit Post</h5>
+                    <h5 class="modal-title">Edit Project</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -57,7 +57,7 @@
                     <div class="col-md">
                     <div class="mb-3">
                         <label class="form-label">title</label>
-                        <input class="form-control" type="text" id="swu_post_modal_form_title" required>
+                        <input class="form-control" type="text" id="swu_project_modal_form_title" required>
                     </div>
                     </div>
                 </div>
@@ -65,8 +65,8 @@
                 <div class="row">
                     <div class="col-md">
                     <div class="mb-3">
-                        <label class="form-label">body</label>
-                        <input class="form-control" type="text" id="swu_post_modal_form_body" required>
+                        <label class="form-label">description</label>
+                        <input class="form-control" type="text" id="swu_project_modal_form_description" required>
                     </div>
                     </div>
                 </div>
@@ -74,8 +74,8 @@
                 <div class="row">
                     <div class="col-md">
                     <div class="mb-3">
-                        <label class="form-label">userId</label>
-                        <input class="form-control" type="text" id="swu_post_modal_form_userId" required>
+                        <label class="form-label">notes</label>
+                        <input class="form-control" type="text" id="swu_project_modal_form_notes" required>
                     </div>
                     </div>
                 </div>
@@ -89,12 +89,12 @@
                         <i class="fas fa-times"></i> Cancel
                     </button>
                     <button type="submit" class="btn btn-success">
-                        <i class="far fa-save"></i> Save Post
+                        <i class="far fa-save"></i> Save Project
                     </button>
                 </div>
             </form>
         </div>
     </div>
 </div>
-<!-- Swu Post Modal End -->
-<!-- Swu Post End -->
+<!-- Swu Project Modal End -->
+<!-- Swu Project End -->
