--- a/src/frontend/Project/markup.html
+++ b/src/frontend/Project/markup.html
@@ -9,7 +9,7 @@
                     <a href="#swu_project_collapse_card" data-bs-toggle="collapse" aria-expanded="true" aria-controls="swu_project_collapse_card" class="text-decoration-none">
                         <h3 class="mb-0"><i class="far fa-star"></i> Project <i class="fas fa-caret-down"></i> </h3>
                     </a>
-                    <div style="margin-top: -10px;"><i> Here you can edit your project </i></div>
+                    <div style="margin-top: -10px;"><i> Here you can edit your Project </i></div>
                 </span>
             </div>
 
@@ -17,14 +17,7 @@
                 <div class="card-body">
 
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <span class="input-group-text" id="swu_project_search_addon"><i class="fas fa-filter"></i>&nbsp;Filtern:</span>
-                                <input type="text" class="form-control" placeholder="Name, Adresse, Account, Id...." aria-describedby="swu_project_search_addon" id="swu_project_filter_input">
-                                <button class="btn btn-outline-secondary" type="button" title="Clear filter" id="swu_project_filter_clear_button"><i class="fas fa-times"></i></button>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
+                        <div class="col">
                             <button type="button" class="btn btn-info float-end" id="swu_project_create_button">
                                 <i class="fas fa-plus"></i>&nbsp; Create Project
                             </button>
