--- a/src/frontend/Project/markup.html
+++ b/src/frontend/Project/markup.html
@@ -7,9 +7,9 @@
             <div class="card-header">
                 <span class="card-title">
                     <a href="#swu_project_collapse_card" data-bs-toggle="collapse" aria-expanded="true" aria-controls="swu_project_collapse_card" class="text-decoration-none">
-                        <h3 class="mb-0"><i class="far fa-star"></i> Project <i class="fas fa-caret-down"></i> </h3>
+                        <h3 class="mb-0"><i class="far fa-star"></i> P1 <i class="fas fa-caret-down"></i> </h3>
                     </a>
-                    <div style="margin-top: -10px;"><i> Here you can edit your Project </i></div>
+                    <div style="margin-top: -10px;"><i> Here you can edit your P1 </i></div>
                 </span>
             </div>
 
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col">
                             <button type="button" class="btn btn-info float-end" id="swu_project_create_button">
-                                <i class="fas fa-plus"></i>&nbsp; Create Project
+                                <i class="fas fa-plus"></i>&nbsp; Create P1
                             </button>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
         <div class="modal-content">
             <form id="swu_project_modal_form">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit Project</h5>
+                    <h5 class="modal-title">Edit P1</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -49,8 +49,8 @@
                 <div class="row">
                     <div class="col-md">
                     <div class="mb-3">
-                        <label class="form-label">title</label>
-                        <input class="form-control" type="text" id="swu_project_modal_form_title" required>
+                        <label class="form-label">notes</label>
+                        <input class="form-control" type="text" id="swu_project_modal_form_notes" required>
                     </div>
                     </div>
                 </div>
@@ -67,8 +67,8 @@
                 <div class="row">
                     <div class="col-md">
                     <div class="mb-3">
-                        <label class="form-label">notes</label>
-                        <input class="form-control" type="text" id="swu_project_modal_form_notes" required>
+                        <label class="form-label">title</label>
+                        <input class="form-control" type="text" id="swu_project_modal_form_title" required>
                     </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <i class="fas fa-times"></i> Cancel
                     </button>
                     <button type="submit" class="btn btn-success">
-                        <i class="far fa-save"></i> Save Project
+                        <i class="far fa-save"></i> Save P1
                     </button>
                 </div>
             </form>
